--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#AC724C</color>
+    <color name="purple_500">#5a3d30</color>
     <color name="purple_700">#AC724C</color>
     <color name="teal_200">#AC724C</color>
     <color name="teal_700">#AC724C</color>
